--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 		<developer>
 			<id>frincon</id>
 			<name>Fernando Rincon</name>
-			<email>frm.rincon@gmail.com</name>
+			<email>frm.rincon@gmail.com</email>
 		</developer>
 	</developers>
 
